# PhotoNext_Emulator

./: CMakeLists.txt  README.md
include/: smartscanemu.h
src/: smartscanemu.c
